# stereo

./: .gitignore  .gitmodules  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  actions.json  cmake_install.cmake  gamepad_bindings.json  stereo-static.vcxproj  stereo.sln  stereo.vcxproj  stereo.vcxproj.filters
Debug/: stereo-static.lib  stereo.ilk
cmake-modules/: findOpenVR.cmake
example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  stereo-world.sln  stereo-world.vcxproj  stereo-world.vcxproj.filters
example/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
example/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
example/glfw/src/Debug/: glfw3.lib
example/glfw/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
example/include/: cli.hpp  window.hpp
example/src/: cli.cpp  main.cpp  window.cpp
example/stereo-world.dir/Debug/stereo-world.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
include/: framebuffer.hpp  gl.h  lib.hpp  log.hpp  mesh.hpp  shader.hpp  stereo.hpp  stereo_export.hpp  texture.hpp  util.hpp  videodecoder.hpp
shaders/: fragment_shader.frag  vertex_shader.vert
src/: framebuffer.cpp  lib.cpp  main.cpp  mesh.cpp  shader.cpp  stereo.cpp  texture.cpp
src/tools/: shaderembedder.cpp
stereo-static.dir/Debug/: stereo-static.vcxproj.FileListAbsolute.txt
stereo-static.dir/Debug/stereo-static.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  stereo-static.lastbuildstate
stereo.dir/Debug/stereo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
stereo_api/src/: videodecoder.cpp
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
